<?xml version="1.0"?>
<package format="2">
  <name>ual_backend_gazebo_light</name>
  <version>0.0.0</version>
  <description>The ual_backend_gazebo_light package</description>

  <maintainer email="freal@us.es">Fran Real</maintainer>
  <maintainer email="arturotorres@us.es">Arturo Torres</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/ual_gazebo_tools</url> -->

  <author email="freal@us.es">Fran Real</author>
  <author email="arturotorres@us.es">Arturo Torres</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ual_core</build_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>ual_core</build_export_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>ual_core</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
