<?xml version="1.0"?>
<package>
  <name>ual_sim_tools</name>
  <version>0.0.0</version>
  <description>This package brings up the mavros interface of a px4 autopilot,
  that can be real or simulted in gazebo with software-in-the-loop (sitl).</description>

  <maintainer email="freal@us.es">Fran Real</maintainer>
  <maintainer email="arturotorres@us.es">Arturo Torres</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/ual_gazebo_tools</url> -->

  <author email="freal@us.es">Fran Real</author>
  <author email="arturotorres@us.es">Arturo Torres</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mavros</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>mavros</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
